[package]
name = "nanots-rs"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for nanots time series database"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/nanots-rs"
keywords = ["timeseries", "database", "embedded"]
categories = ["database"]

[dependencies]
# No runtime dependencies needed

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3.0"
